# slapr

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  action.yml  example.txt  main.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  issue_template.md  pull_request_template.md
.github/workflows/: run_unit_tests.yml  slapr.yml
action/: github.py  main.py  settings.py  slack.py
slapr/: __init__.py  __main__.py  config.py  emojis.py  github.py  main.py  multichannel.py  review_map.py  settings.py  slack.py
tests/: __init__.py  test_emojis.py  test_review_map.py  test_slapr.py
